publish: error code annotation
generated from commit 70be66132d628b22b4be27708c1ebdd12fc22938

--- a/index.html
+++ b/index.html
@@ -283,19 +283,28 @@
     </span><span class="s2">"status"</span><span class="p">:</span><span class="w"> </span><span class="s2">"complete"</span><span class="w">
   </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
-</span></code></pre><h3 id='code-400-error'>Code 400 - Error</h3><h4 id='possible-response-1'>possible response 1:</h4><pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
+</span></code></pre>
+<blockquote>
+<h3 id='code-400-error'>Code 400 - Error</h3><h4 id='possible-response-1'>possible response 1:</h4></blockquote>
+<pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
   </span><span class="s2">"params"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
     </span><span class="s2">"Code"</span><span class="p">:</span><span class="w"> </span><span class="mi">400</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Message"</span><span class="p">:</span><span class="w"> </span><span class="s2">"start/end time must be less than the current timestamp ({current_time})!"</span><span class="w">
   </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
-</span></code></pre><h4 id='possible-response-2'>possible response 2:</h4><pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
+</span></code></pre>
+<blockquote>
+<h4 id='possible-response-2'>possible response 2:</h4></blockquote>
+<pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
   </span><span class="s2">"params"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
     </span><span class="s2">"Code"</span><span class="p">:</span><span class="w"> </span><span class="mi">400</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Message"</span><span class="p">:</span><span class="w"> </span><span class="s2">"start/end time must be greater than zero!"</span><span class="w">
   </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
-</span></code></pre><h4 id='possible-response-3'>possible response 3:</h4><pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
+</span></code></pre>
+<blockquote>
+<h4 id='possible-response-3'>possible response 3:</h4></blockquote>
+<pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
   </span><span class="s2">"params"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
     </span><span class="s2">"Code"</span><span class="p">:</span><span class="w"> </span><span class="mi">400</span><span class="p">,</span><span class="w">
     </span><span class="s2">"Message"</span><span class="p">:</span><span class="w"> </span><span class="s2">"start time must be smaller than end time!"</span><span class="w">
@@ -338,7 +347,6 @@
 
 <blockquote>
 <p>The HTTP request returns the following JSON structured:</p>
-</blockquote>
 <h3 id='code-200-success-2'>Code 200 - Success</h3><pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
   </span><span class="s2">"params"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
     </span><span class="s2">"limit"</span><span class="p">:</span><span class="w"> </span><span class="mi">30</span><span class="p">,</span><span class="w">
@@ -367,7 +375,8 @@
     </span><span class="s2">"status"</span><span class="p">:</span><span class="w"> </span><span class="s2">"complete"</span><span class="w">
   </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
-</span></code></pre>
+</span></code></pre></blockquote>
+
 <p>This endpoint retrieves the latest block from cennznet.</p>
 <h1 id='errors'>Errors</h1>
 <aside class="notice">
