--- a/index.html
+++ b/index.html
@@ -253,9 +253,8 @@
 <p><code>GET https://dh8cl297ul.execute-api.ap-southeast-1.amazonaws.com/api/blocks</code></p>
 
 <blockquote>
-<p>The HTTP request returns the following JSON structure:
-Code 200 - Success</p>
-</blockquote>
+<p>The HTTP request returns the following JSON structure:</p>
+<h3 id='code-200-success'>Code 200 - Success</h3></blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
   </span><span class="s2">"params"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
     </span><span class="s2">"limit"</span><span class="p">:</span><span class="w"> </span><span class="mi">30</span><span class="p">,</span><span class="w">
@@ -286,8 +285,7 @@ Code 200 - Success</p>
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 <blockquote>
-<p>Code 400 - Error</p>
-
+<h3 id='code-400-error'>Code 400 - Error</h3>
 <p>Possible response 1:</p>
 </blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
@@ -353,39 +351,35 @@ Code 200 - Success</p>
 
 <blockquote>
 <p>The HTTP request returns the following JSON structured:</p>
-
-<p>Code 200 - Success
-`<code>json
-{
-  &quot;params&quot;: {
-    &quot;limit&quot;: 30,
-    &quot;offset&quot;: 0,
-    &quot;start_time&quot;: 1540608690,
-    &quot;end_time&quot;: 1548384690
-  },
-  &quot;result&quot;: {
-    &quot;number&quot;: 158174,
-    &quot;hash&quot;: &quot;0x9965008d9b0e6f3d07f0b274c0dfaff4bdc86f99a0f229c11f3b5dbb8ab00a68&quot;,
-    &quot;parentHash&quot;: &quot;0xf710b4cd572c6f078f4b59405ee35dc3f40d58e76aeceb5beeae7b9d3f720c7a&quot;,
-    &quot;stateRoot&quot;: &quot;0x71d488ad7d7d95a68d6b1445727890c3c54d1fdb9e8393d8cf94f30755eaf99c&quot;,
-    &quot;extrinscicsRoot&quot;: &quot;0xc8d89314f6372c38e66292de1278970f93ea1b541aa401fa52aa4ce941fbcf7c&quot;,
-    &quot;timestamp&quot;: 1548384684,
-    &quot;transactionCount&quot;: 0,
-    &quot;baseFee&quot;: 10,
-    &quot;byteFee&quot;: 1,
-    &quot;transferFee&quot;: 1,
-    &quot;author&quot;: &quot;5DcS1HEPFaPJVwoU52HLZNkuikoP5Qey2eU5B26v6D7qjkiB&quot;,
-    &quot;extrinsicsCount&quot;: 1,
-    &quot;validators&quot;: [
-      &quot;5DcS1HEPFaPJVwoU52HLZNkuikoP5Qey2eU5B26v6D7qjkiB&quot;,
-      &quot;5G6tDRK9KSWLx3zL4gMnzh2K6QUNAb6EGCiyPMTAzCmt45A4&quot;,
-      &quot;5EKGZwAuwvVpVaGWZJ3hYDqTSxQCDDUgeMv36M4qLq7wtWLH&quot;
-    ],
-    &quot;status&quot;: &quot;complete&quot;
-  }
-}
-</code></p>
-</blockquote>
+<h3 id='code-200-success-2'>Code 200 - Success</h3><pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
+  </span><span class="s2">"params"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
+    </span><span class="s2">"limit"</span><span class="p">:</span><span class="w"> </span><span class="mi">30</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"offset"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"start_time"</span><span class="p">:</span><span class="w"> </span><span class="mi">1540608690</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"end_time"</span><span class="p">:</span><span class="w"> </span><span class="mi">1548384690</span><span class="w">
+  </span><span class="p">},</span><span class="w">
+  </span><span class="s2">"result"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
+    </span><span class="s2">"number"</span><span class="p">:</span><span class="w"> </span><span class="mi">158174</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"hash"</span><span class="p">:</span><span class="w"> </span><span class="s2">"0x9965008d9b0e6f3d07f0b274c0dfaff4bdc86f99a0f229c11f3b5dbb8ab00a68"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"parentHash"</span><span class="p">:</span><span class="w"> </span><span class="s2">"0xf710b4cd572c6f078f4b59405ee35dc3f40d58e76aeceb5beeae7b9d3f720c7a"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"stateRoot"</span><span class="p">:</span><span class="w"> </span><span class="s2">"0x71d488ad7d7d95a68d6b1445727890c3c54d1fdb9e8393d8cf94f30755eaf99c"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"extrinscicsRoot"</span><span class="p">:</span><span class="w"> </span><span class="s2">"0xc8d89314f6372c38e66292de1278970f93ea1b541aa401fa52aa4ce941fbcf7c"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"timestamp"</span><span class="p">:</span><span class="w"> </span><span class="mi">1548384684</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"transactionCount"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"baseFee"</span><span class="p">:</span><span class="w"> </span><span class="mi">10</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"byteFee"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"transferFee"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"author"</span><span class="p">:</span><span class="w"> </span><span class="s2">"5DcS1HEPFaPJVwoU52HLZNkuikoP5Qey2eU5B26v6D7qjkiB"</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"extrinsicsCount"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"validators"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="w">
+      </span><span class="s2">"5DcS1HEPFaPJVwoU52HLZNkuikoP5Qey2eU5B26v6D7qjkiB"</span><span class="p">,</span><span class="w">
+      </span><span class="s2">"5G6tDRK9KSWLx3zL4gMnzh2K6QUNAb6EGCiyPMTAzCmt45A4"</span><span class="p">,</span><span class="w">
+      </span><span class="s2">"5EKGZwAuwvVpVaGWZJ3hYDqTSxQCDDUgeMv36M4qLq7wtWLH"</span><span class="w">
+    </span><span class="p">],</span><span class="w">
+    </span><span class="s2">"status"</span><span class="p">:</span><span class="w"> </span><span class="s2">"complete"</span><span class="w">
+  </span><span class="p">}</span><span class="w">
+</span><span class="p">}</span><span class="w">
+</span></code></pre></blockquote>
 
 <p>This endpoint retrieves the latest block from cennznet.</p>
 <h1 id='errors'>Errors</h1>
