--- a/index.html
+++ b/index.html
@@ -222,13 +222,16 @@
             <a href="#introduction" class="toc-h1 toc-link" data-title="Introduction">Introduction</a>
           </li>
           <li>
-            <a href="#blocks-endoint" class="toc-h1 toc-link" data-title="Blocks endoint">Blocks endoint</a>
+            <a href="#blocks-endpoint" class="toc-h1 toc-link" data-title="Blocks endpoint">Blocks endpoint</a>
               <ul class="toc-list-h2">
                   <li>
                     <a href="#get-all-blocks" class="toc-h2 toc-link" data-title="Get All Blocks">Get All Blocks</a>
                   </li>
                   <li>
                     <a href="#get-latest-blocks" class="toc-h2 toc-link" data-title="Get latest Blocks">Get latest Blocks</a>
+                  </li>
+                  <li>
+                    <a href="#get-latest-block-number" class="toc-h2 toc-link" data-title="Get latest Block number">Get latest Block number</a>
                   </li>
               </ul>
           </li>
@@ -248,7 +251,7 @@
 <p>Welcome to the CENNZ scan API! You can use our API to access CENNZ scan API endpoints, which can get information on various transactions, blocks, and address from CENNZ net (RIMU version)</p>
 
 <p>We have language bindings in Shell, Ruby, Python, and JavaScript! You can view code examples in the dark area to the right, and you can switch the programming language of the examples with the tabs in the top right.</p>
-<h1 id='blocks-endoint'>Blocks endoint</h1><h2 id='get-all-blocks'>Get All Blocks</h2><pre class="highlight plaintext"><code>curl -X GET "https://dh8cl297ul.execute-api.ap-southeast-1.amazonaws.com/api/blocks?limit=30&amp;page=1" -H "accept: application/json"
+<h1 id='blocks-endpoint'>Blocks endpoint</h1><h2 id='get-all-blocks'>Get All Blocks</h2><pre class="highlight plaintext"><code>curl -X GET "https://dh8cl297ul.execute-api.ap-southeast-1.amazonaws.com/api/blocks?limit=30&amp;page=1" -H "accept: application/json"
 </code></pre><h3 id='http-request'>HTTP Request</h3>
 <p><code>GET https://dh8cl297ul.execute-api.ap-southeast-1.amazonaws.com/api/blocks</code></p>
 
@@ -351,7 +354,8 @@
 
 <blockquote>
 <p>The HTTP request returns the following JSON structured:</p>
-<h3 id='code-200-success-2'>Code 200 - Success</h3><pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
+<h3 id='code-200-success-2'>Code 200 - Success</h3></blockquote>
+<pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
   </span><span class="s2">"params"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
     </span><span class="s2">"limit"</span><span class="p">:</span><span class="w"> </span><span class="mi">30</span><span class="p">,</span><span class="w">
     </span><span class="s2">"offset"</span><span class="p">:</span><span class="w"> </span><span class="mi">0</span><span class="p">,</span><span class="w">
@@ -379,9 +383,20 @@
     </span><span class="s2">"status"</span><span class="p">:</span><span class="w"> </span><span class="s2">"complete"</span><span class="w">
   </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
-</span></code></pre></blockquote>
-
+</span></code></pre>
 <p>This endpoint retrieves the latest block from cennznet.</p>
+<h2 id='get-latest-block-number'>Get latest Block number</h2><pre class="highlight plaintext"><code>curl -X GET "https://dh8cl297ul.execute-api.ap-southeast-1.amazonaws.com/api/blocks/latest/number" -H "accept: application/json"
+</code></pre><h3 id='http-request-3'>HTTP Request</h3>
+<p><code>GET https://dh8cl297ul.execute-api.ap-southeast-1.amazonaws.com/api/blocks/latest/number</code></p>
+
+<blockquote>
+<p>The HTTP request returns the following JSON structured:</p>
+<h3 id='code-200-success-3'>Code 200 - Success</h3></blockquote>
+<pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
+  </span><span class="s2">"latestBlockNumber"</span><span class="p">:</span><span class="w"> </span><span class="mi">14715</span><span class="w">
+</span><span class="p">}</span><span class="w">
+</span></code></pre>
+<p>This endpoint retrieves the latest block number from cennznet.</p>
 <h1 id='errors'>Errors</h1>
 <aside class="notice">
 This error section is stored in a separate file in <code>includes/_errors.md</code>. Slate allows you to optionally separate out your docs into many files...just save them to the <code>includes</code> folder and add them to the top of your <code>index.md</code>'s frontmatter. Files are included in the order listed.
